# GeoToolCN

./: .gitignore  CLAUDE.md  DATA_UPDATE_REPORT.md  LICENSE  MIGRATION_v2.md  README.md  README_EN.md  pyproject.toml
.github/workflows/: publish.yml
GeoToolCN/: __init__.py  admin_tree.py  coords.py  core.py
GeoToolCN/data/: DATA_VERSION.json  china_admin.json  china_province.geojson
scripts/: fetch_datav_geojson.py  generate_admin_data.py  validate_data.py
tests/: test_admin_tree.py  test_coords.py  test_geotool.py
tests/smoke/: test_public_api.py
